# recordly-custom

./: .gitignore  README.md
asar-inspect/: package-lock.json  package.json
asar-inspect/dist-electron/: main.cjs  preload.mjs
asar-inspect/electron/native/: NativeCursorMonitor.swift  ScreenCaptureKitRecorder.swift  ScreenCaptureKitWindowList.swift  SystemCursorAssets.swift
asar-inspect/electron/native/cursor-monitor/: CMakeLists.txt
asar-inspect/electron/native/cursor-monitor/src/: main.cpp
asar-inspect/electron/native/gpu-export-probe/: CMakeLists.txt
asar-inspect/electron/native/gpu-export-probe/src/: main.cpp
asar-inspect/electron/native/nvidia-cuda-compositor/: CMakeLists.txt  render-tahoe-cursor-atlas.cjs  run-mp4-pipeline.mjs
asar-inspect/electron/native/nvidia-cuda-compositor/src/: main.cu
asar-inspect/electron/native/wgc-capture/: CMakeLists.txt
asar-inspect/electron/native/wgc-capture/src/: main.cpp  mf_encoder.cpp  mf_encoder.h  monitor_utils.cpp  monitor_utils.h  wasapi_loopback.cpp  wasapi_loopback.h  wgc_session.cpp  wgc_session.h
asar-inspect/electron/native/windows-capture/: CMakeLists.txt
asar-inspect/electron/native/windows-capture/src/: dxgi_session.cpp  dxgi_session.h  main.cpp  mf_encoder.cpp  mf_encoder.h  monitor_utils.cpp  monitor_utils.h  wasapi_loopback.cpp  wasapi_loopback.h
docs/: maintenance-checklist.md  maintenance-notes.md  phone-camera.md  release-process.md
docs/release-notes/: 2026-06-27-main-release-summary.md  2026-06-27-phone-camera-preview-mirroring.md
scripts/: apply-webcam-layout-cache-bust.js  fix-phone-camera-firewall.ps1  patch-auto-zoom-and-webcam-settings-preview.js  patch-cursor-settings-global-prefs.js  patch-desktop-webcam-rotation.js  patch-disable-editor-webcam-segment-zoom.js  patch-phone-camera-aspect-ratio-root.js  patch-phone-camera-contain-preview-export.js  patch-phone-camera-no-record-dialog.js  patch-phone-camera-orientation.js  patch-phone-camera-recording-live-stream.js  patch-phone-camera-secure-capture.js  patch-phone-camera-session-ux.js  patch-phone-camera-smooth-stream.js  patch-phone-camera.js  patch-recording-webcam-fullscreen-preview.js  patch-recording-webcam-pointer-swipe.js  patch-recording-webcam-trigger-when-open.js  patch-recording-webcam-wheel-capture.js  patch-recording-webcam-wheel-direction.js  patch-recording-webcam-wheel-keyframes.js  patch-webcam-crop-aspect-layout.js  patch-webcam-free-crop.js  patch-webcam-fullscreen-clip.js  patch-webcam-layout-keyframes.js  patch-webcam-preview-no-distort.js  patch-webcam-react-zoom-no-editor-rot.js  patch-webcam-recorded-rect-consistency.js  patch-webcam-recording-editor-consistency.js  patch-webcam-settings-keyframes.js  verify-phone-camera.js  verify-webcam-layout-keyframes.js
